src/objects/featfinder__Feature__c.object
<CustomObject>
    <fields>
        <fullName>featfinder__Description_Notes__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>featfinder__Feature__c</fullName>
        <label>Feature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>featfinder__KeyColor__c</fullName>
        <formula>IF( ISPICKVAL(featfinder__Key__c,&quot;Red&quot;), IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 30, 30),
IF( ISPICKVAL(featfinder__Key__c,&quot;Yellow&quot;),IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 30, 30),
IF(ISPICKVAL(featfinder__Key__c,&quot;Green&quot;),IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 30, 30),
IF(ISPICKVAL(featfinder__Key__c,&quot;Blue&quot;),IMAGE(&quot;https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/Solid_blue.svg/2000px-Solid_blue.svg.png&quot;, &quot;Blue&quot;, 30, 30),IMAGE(&quot;https://4.bp.blogspot.com/-XV3YHQJsCvA/T31euZE_BzI/AAAAAAAAAU0/UaWQHvrrBYQ/s320/black%2B2.png&quot;, &quot;Black&quot;, 30, 30)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KeyColor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featfinder__Key__c</fullName>
        <label>Key</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>featfinder__Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featfinder__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>featfinder__Release__c</referenceTo>
        <relationshipLabel>Features</relationshipLabel>
        <relationshipName>Features</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>featfinder__UI_Impact__c</fullName>
        <label>ui impact</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>featfinder__sub_product__c</fullName>
        <label>sub product</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Feature</label>
    <nameField>
        <label>Feature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>